# LuisaCompute-coroutine

./: .clang-format  .gitignore  README.md
include/luisa/: luisa-compute.h
include/luisa/ast/: function.h  function_builder.h  op.h  statement.h  type.h  type_registry.h  variable.h
include/luisa/core/: dll_export.h  thread_pool.h
include/luisa/coro/: coro_dispatcher.h  coro_frame.h  coro_frame_buffer.h  coro_frame_desc.h  coro_frame_smem.h  coro_frame_soa.h  coro_func.h  coro_graph.h  coro_node.h  coro_scheduler.h  coro_token.h  coro_transition.h  radix_sort.h  shader_scheduler.h
scripts/: print_hlsl_builtin.lua
src/: CMakeLists.txt
src/ast/: ast2json.cpp  callable_library.cpp  function_builder.cpp  function_duplicator.cpp  statement.cpp  type.cpp
src/core/: CMakeLists.txt  thread_pool.cpp
src/coro/: CMakeLists.txt  coro_dispatcher.cpp  coro_frame.cpp  coro_frame_buffer.cpp  coro_frame_desc.cpp  coro_frame_smem.cpp  coro_func.cpp  coro_graph.cpp  coro_node.cpp  shader_scheduler.cpp
src/coro/schedulers/: persistent_threads.cpp  state_machine.cpp  wavefront.cpp
src/dsl/: CMakeLists.txt  func.cpp
src/ir/: ast2ir.cpp  ir2ast.cpp  transform.cpp
src/runtime/: CMakeLists.txt  byte_buffer.cpp  command_buffer.cpp  event.cpp  shader_scheduler.cpp  sparse_command_list.cpp  swapchain.cpp
src/tests/: CMakeLists.txt  test_ast2ir.cpp  test_autodiff.cpp  test_coroutine.cpp  test_coroutine_helloworld.cpp  test_coroutine_ir.cpp  test_coroutine_path_tracing.cpp  test_coroutine_sdf_renderer.cpp  test_sdf_renderer_ir.cpp  test_skyline.cpp  test_sort.cpp  xmake.lua
(+129 files in other folders)
